[gd_scene load_steps=13 format=2]

[ext_resource path="res://hud/character-select/SelectionBox.gd" type="Script" id=1]
[ext_resource path="res://assets/box.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/permanent_marker-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://player/baron_sheet_full.png" type="Texture" id=4]
[ext_resource path="res://assets/sound/menu_selection.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/menu_confirm.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/menu_back.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, 6.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 130, 130 ), Vector2( 130, 120 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -8.99563, 9.44294, -10.0057, 0.0 ]
}

[sub_resource type="Animation" id=5]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1 ]
}

[node name="SelectionBox" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 130, 121.022 )
rotation = 0.088566
texture = ExtResource( 2 )

[node name="DeviceSprite" type="TextureRect" parent="Sprite"]
margin_left = -55.0
margin_top = 24.0
margin_right = 73.0
margin_bottom = 152.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="DeviceNumber" type="Label" parent="Sprite"]
margin_left = 30.0
margin_top = 70.0
margin_right = 70.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1

[node name="State" type="Label" parent="Sprite"]
margin_left = -100.0
margin_top = -84.0
margin_right = 98.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PRESS START"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "idle"
anims/idle = SubResource( 3 )
anims/shake = SubResource( 4 )

[node name="SharkSprite" type="Sprite" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 100, 420 )
scale = Vector2( -1, 1 )
texture = ExtResource( 4 )
vframes = 4
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="SharkSprite"]
autoplay = "walk"
anims/walk = SubResource( 5 )

[node name="Sounds" type="Node" parent="."]

[node name="SelectSFX" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
bus = "SFX"

[node name="ConfirmSFX" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
bus = "SFX"

[node name="CancelSFX" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -6.0
bus = "SFX"

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
